# LiteRT-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  web_server_test.py
.agents/skills/litert_cli/: SKILL.md
.github/workflows/: nightly_release.yml  nightly_unittests.yml  run_post_merge.yml  run_pre_merge.yml  stable_release.yml  unittests_python.yml
examples/: litert_cli.ipynb  run_cli_demo.sh  run_cli_npu.sh  run_commands.sh  run_models.sh  run_smoke_tests.sh  utils.sh
examples/codelabs/: cli_101.md
examples/commands/: benchmark_gcp_test.sh  benchmark_test.sh  compile_test.sh  convert_test.sh  download_test.sh  quantize_test.sh  run_test.sh  visualize_test.sh
examples/models/: convnext.sh  efficientnet.ps1  efficientnet.sh  gemma3.sh  gemma4.ps1  gemma4.sh  mobilenet.sh  parakeet.sh  qwen1_5.sh  resnet.ps1  resnet.sh  shufflenet.sh  smollm2.sh  squeezenet.sh  whisper_tiny.sh  yamnet.ps1  yamnet.sh
examples/models/presets/: default.py
litert_cli/: commands_help_test.py  litert.py  litert_help_test.py  litert_test.py
litert_cli/commands/: clean.py  compile.py  compile_helper.py  delete.py  download.py  import.py  list.py  lm.py  quantize.py  visualize.py
litert_cli/commands/benchmark/: __init__.py  android.py  cli.py  desktop.py  gcp.py  web.py
litert_cli/commands/convert/: __init__.py  cli.py  generic.py  huggingface.py  huggingface_test.py
litert_cli/commands/run/: __init__.py  android.py  cli.py  desktop.py
litert_cli/core/: android_utils.py  android_utils_test.py  constants.py  deps.py  deps_test.py  inputs.py  inputs_test.py  log_filters.py  models.py  npu_utils.py  targets_manager.py  utils.py
litert_cli/models/: __init__.py  base.py
litert_cli/models/asr/: __init__.py  asr_model.py  parakeet_ctc.py  runner.py
litert_cli/test_data/: dummy_calib_data.py  dummy_cv_model.py  dummy_cv_model.tflite  generate_test_inputs.py  mobilenet_v3_calib_data.py  quantize_recipe.json  resnet18.py
test_scripts/: demo_efficientnet.sh  demo_gemma4.sh  demo_resnet.sh  demo_yamnet.sh  litert_cli.ipynb  litert_cli_demo.sh  litert_cli_e2e.sh  litert_cli_test_commands.sh  run_cli_demo.sh  run_cli_npu.sh  run_cli_oss.sh  run_smoke_tests.sh  run_tests_portable.sh
test_scripts/commands/: convert_test.sh  quantize_test.sh
test_scripts/models/: efficientnet.ps1  efficientnet.sh  gemma4.ps1  gemma4.sh  parakeet.sh  qwen1_5.sh  resnet.ps1  resnet.sh  utils.ps1  utils.sh  whisper_tiny.sh  yamnet.ps1  yamnet.sh
tools/: build_wheels.py
