[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litert-cli"
version = "0.1.1.dev22"

description = "LiteRT Toolkit Command Line Interface"
dependencies = [
    "click",
    "numpy",
    "immutabledict",
    "huggingface_hub",
    "requests",
    "ai-edge-litert",
    "Pillow",
    "absl-py",
]

[project.optional-dependencies]
test = [
]
compile = [
    "ai-edge-litert-sdk-qualcomm",
    "ai-edge-litert-sdk-mediatek",
]
convert = [
    "litert-torch",
    "torch",
    # Latest transformers break litert-torch-nightly
    "transformers<5.0.0",
    "torchvision",
    "sentencepiece",
]
quantize = [
    "ai-edge-quantizer",
]
visualize = [
    "ai-edge-model-explorer"
]
lm = [
    "litert-lm",
]
asr = [
    "librosa",
    "transformers<5.0.0",
    "sounddevice",
    "torch",
]
all = [
    "litert-cli[compile,quantize,convert,visualize,lm,asr]"
]

[project.scripts]
litert = "litert_cli.litert:cli"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"litert_cli" = ["test_data/*"]
"test_scripts" = ["*"]
