[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litert-cli"
version = "0.1.1.dev23"

description = "LiteRT Toolkit Command Line Interface"
dependencies = [
    "click",
    "numpy",
    "immutabledict",
    "huggingface_hub",
    "requests",
    "ai-edge-litert-nightly",
    "Pillow",
    "absl-py",
]

[project.optional-dependencies]
test = [
]
compile = [
    "ai-edge-litert-sdk-qualcomm-nightly",
    "ai-edge-litert-sdk-mediatek-nightly",
]
convert = [
    "litert-torch-nightly",
    "torch",
    "transformers",
    "torchvision",
    "sentencepiece",
]
quantize = [
    "ai-edge-quantizer-nightly",
]
visualize = [
    "ai-edge-model-explorer"
]
lm = [
    "litert-lm-nightly",
]
asr = [
    "librosa",
    "transformers",
    "sounddevice",
    "torch",
]
all = [
    "litert-cli[compile,quantize,convert,visualize,lm,asr]"
]

[project.scripts]
litert = "litert_cli.litert:cli"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"litert_cli" = ["test_data/*"]
"test_scripts" = ["*"]
