[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litert-cli"
description = "LiteRT Toolkit Command Line Interface"
readme = "README.md"
dynamic = ["version"]
license = "Apache-2.0"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "On-Device ML",
    "AI",
    "Google",
    "TFLite",
    "LiteRT",
    "Quantization",
    "PyTorch",
    "CLI",
    "Benchmark",
    "LLMs"
]

dependencies = [
    "click",
    "numpy",
    "immutabledict",
    "huggingface_hub",
    "requests",
    "ai-edge-litert-nightly",
    "Pillow",
    "absl-py",
]

[project.urls]
Homepage = "https://github.com/google-ai-edge/LiteRT-CLI"

[project.optional-dependencies]
test = [
]
compile = [
    "ai-edge-litert-sdk-qualcomm-nightly",
    "ai-edge-litert-sdk-mediatek-nightly",
]
convert = [
    "ai-edge-quantizer-nightly",
    "litert-torch-nightly",
    "torch",
    "transformers",
    "torchvision",
    "sentencepiece",
]
quantize = [
    "ai-edge-quantizer-nightly",
]
visualize = [
    "ai-edge-model-explorer"
]
lm = [
    "litert-lm-nightly",
]
asr = [
    "librosa",
    "transformers",
    "sounddevice",
    "torch",
]
all = [
    "litert-cli[compile,quantize,convert,visualize,lm,asr]"
]

[project.scripts]
litert = "litert_cli.litert:cli"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"litert_cli" = ["test_data/*"]
"examples" = ["*"]
